[back][Modify]: appbti 작동방식 결과 저장으로 변경
