# back/src/swagger/swagger-output.json
@@ -238,12 +238,12 @@
         ]
       }
     },
-    "/appbtianswers": {
+    "/appbti": {
       "post": {
         "tags": [
           "Appbti"
         ],
-        "summary": "appbti 테스트 결과를 생성",
+        "summary": "appbti 결과 생성, 답변을 body로 받음",
         "description": "appbti 테스트 결과를 등록한다.",
         "parameters": [
           {
@@ -281,6 +281,35 @@
             }
           }
         }
+      },
+      "get": {
+        "tags": [
+          "Appbti"
+        ],
+        "summary": "appbti 결과 보여줌",
+        "description": "appbti 테스트 결과를 보내준다.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/freeboards": {
